# seda-rust

./: .env  .env.example  .gitattributes  .gitignore  CLI.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Makefile  README.md  build.sh  config.toml  example.config.toml  seda_db.db3  test.sh
adapters/: Cargo.toml
adapters/chain/: Cargo.toml
adapters/chain/src/: another_chain.rs  another_mainchain.rs  another_manichain.rs  chain_adapter_trait.rs  errors.rs  lib.rs  mainchain_adapter_trait.rs  near_chain.rs  near_mainchain.rs
adapters/http/: Cargo.toml
adapters/http/src/: errors.rs  lib.rs  test_adapter.rs
adapters/p2p/: Cargo.toml
adapters/p2p/src/: errors.rs  lib.rs
adapters/p2p/src/libp2p/: behaviour.rs  libp2p_test.rs  mod.rs  transport.rs
adapters/runtime/: Cargo.toml
adapters/runtime/src/: bytes.rs  errors.rs  host_adapter.rs  in_memory_adapter.rs  in_memory_adapter_test.rs  lib.rs  runtime_adapter.rs  test_host.rs
adapters/runtime/src/host/: chain_call.rs  chain_change.rs  chain_view.rs  db_get.rs  db_set.rs  http_fetch.rs  mod.rs
adapters/src/: errors.rs  lib.rs  mainchain_adapter.rs  mainchain_adapter_trait.rs  near_adapter.rs  near_mainchain.rs
adapters/storage/: Cargo.toml
adapters/storage/src/: errors.rs  lib.rs  test_adapter.rs
cli/: Cargo.toml
cli/src/: config.rs  errors.rs  helpers.rs  lib.rs  main.rs  node_commands.rs  seda_client.rs
cli/src/cli/: cli_commands.rs  mod.rs  near_backend.rs  node_commands.rs
cli/src/cli/commands/: mod.rs  run.rs
cli/src/cli/commands/node/: bridge.rs  get_node.rs  get_nodes.rs  mod.rs  node_result.rs  register.rs  register_node.rs  (+4 more)
config/: Cargo.toml
config/src/: config.rs  errors.rs  lib.rs
config/src/configs/: logger.rs  macros.rs  mod.rs  node.rs  p2p.rs
config/src/configs/main_chain/: another_config.rs  dummy.rs  mod.rs  near.rs
contracts/: Cargo.toml  build.sh  build_all.sh  launch-local-near-cluster.sh
contracts/mainchain/: Cargo.toml  build.sh
contracts/mainchain/src/: account.rs  batch.rs  batch_test.rs  block.rs  block_test.rs  consts.rs  dao.rs  dao_test.rs  data_request.rs  data_request_test.rs  epoch.rs  fungible_token.rs  lib.rs  node_registry.rs  node_registry_test.rs  slot_test.rs  staking.rs  storage.rs  verify.rs  verify_test.rs
contracts/seda-token/: Cargo.toml  README.md  build.sh
contracts/seda-token/src/: lib.rs
contracts/src/: batch.rs  batch_test.rs  block.rs  block_test.rs  consts.rs  dao_test.rs  data_request.rs  data_request_test.rs  epoch.rs  fungible_token.rs  fungible_token_test.rs  lib.rs  macros.rs  mainchain.rs  mainchain_test.rs  merkle.rs  node_registry.rs  node_registry_test.rs  slot.rs  slot_test.rs  storage.rs  test_utils.rs  utils.rs  verify_test.rs
contracts/staking-pool/: Cargo.toml  build.sh
contracts/staking-pool/src/: callbacks.rs  fungible_token.rs  internal.rs  lib.rs  staking.rs  staking_test.rs  test_utils.rs  token_receiver.rs
contracts/staking-pool/tests/: general.rs.disable  quickcheck.rs.disable  utils.rs.disable
contracts/tests/: Cargo.toml  README.md
contracts/tests/src/: lib.rs  seda_token.rs  staking.rs  staking_pool.rs  utils.rs
crypto/: Cargo.toml
crypto/src/: crypto_test.rs  errors.rs  lib.rs
logger/: Cargo.toml
logger/src/: config.rs  lib.rs
node/: Cargo.toml  build.rs
node/src/: app.rs  config.rs  errors.rs  event_queue.rs  event_queue_handler.rs  event_queue_test.rs  generate_mnemonic.rs  generate_sk.rs  helpers.rs  job_manager.rs  job_manager_test.rs  lib.rs  near_adapter.rs  node_context.rs  p2p.rs  p2p_behaviour.rs  p2p_utils.rs  rpc.rs  run_test.rs  runtime_adapter.rs  runtime_job.rs  server.rs  super_adapters.rs  test_adapters.rs
node/src/app/: job_manager.rs  job_manager_test.rs  mod.rs  p2p_message_handler.rs  shutdown.rs
node/src/host/: chain_call.rs  chain_change.rs  chain_view.rs  db_get.rs  db_set.rs  http_fetch.rs  mod.rs  runtime_host.rs  set_app_addr.rs  trigger_event.rs
node/src/p2p/: mod.rs
node/test_files/: demo-cli.wasm  promise-wasm-bin.wasm
node/wasm_files/: cli.wasm
p2p/: Cargo.toml
p2p/src/: errors.rs  lib.rs
p2p/src/libp2p/: behaviour.rs  discovery_status.rs  libp2p_test.rs  mod.rs  peer_list.rs  transport.rs
runtime/: Cargo.toml
runtime/core/: Cargo.toml  build.rs  seda_db.db3
runtime/core/src/: adapters.rs  bytes.rs  config.rs  context.rs  errors.rs  host_adapter.rs  imports.rs  lib.rs  memory_adapter.rs  near_runtime_test.rs  runtime.rs  runtime_test.rs  test_adapters.rs  test_host.rs  vm_result.rs
runtime/core/src/promise/: mod.rs  promise_actions.rs  promise_queue.rs  promises.rs
runtime/core/src/storage/: bytes.rs  in_memory_adapter.rs  in_memory_adapter_test.rs  memory_adapter.rs  mod.rs
runtime/core/test_files/: cli.wasm  demo-cli.wasm  demo_cli.wasm  promise-wasm-bin.wasi.wasm  promise-wasm-bin.wasm  promise_wasm_bin.wasm
runtime/core/test_res/promise_wasm_bin/: Cargo.toml
runtime/macros/: Cargo.toml
runtime/macros/src/: adapter.rs  call_self.rs  lib.rs
runtime/sdk/: Cargo.toml
runtime/sdk/src/: bytes.rs  chain.rs  errors.rs  events.rs  level.rs  lib.rs  p2p.rs
runtime/sdk/src/promises/: actions.rs  mod.rs  promise.rs
runtime/sdk/src/wasm/: bn254.rs  call.rs  chain_interactor.rs  config.rs  database.rs  execution.rs  http.rs  log.rs  memory.rs  mod.rs  p2p.rs  promise.rs  raw.rs
runtime/src/: adapters.rs  bytes.rs  config_old.rs  context.rs  errors.rs  imports.rs  in_memory_adapter.rs  in_memory_adapter_test.rs  lib.rs  memory_adapter.rs  runtime.rs  runtime_test.rs
runtime/src/promise/: mod.rs
test_wasm_bins/demo_cli/: Cargo.toml
test_wasm_bins/demo_cli/src/: main.rs
test_wasm_bins/promise_wasm_bin/: Cargo.toml
test_wasm_bins/promise_wasm_bin/src/: lib.rs  main.rs
test_wasm_bins/promise_wasm_bin/src/promise/: mod.rs  raw.rs
wasm/cli/: Cargo.toml
wasm/cli/src/: error.rs  errors.rs  lib.rs  main.rs
wasm/cli/src/commands/: get_node.rs  get_node_owner.rs  get_nodes.rs  mod.rs  register_node.rs  shared_structs.rs  unregister_node.rs  update_node.rs
wasm/test/demo-cli/: Cargo.toml
wasm/test/demo-cli/src/: main.rs
(+56 files in other folders)
