[workspace]
resolver = "2"
default-members = ["cli"]
members = [
	"adapters/chain",
	# "adapters/http",
	"adapters/p2p",
	"adapters/runtime",
	# "adapters/storage",
	"cli",
	"config",
	"contracts",
	"logger",
	"node",
	"runtime/core",
	"runtime/macros",
	"wasm/cli",
	"wasm/test/demo-cli",
	"wasm/test/promise-wasm-bin",
]

[profile.dev]
codegen-units = 512
debug = 2
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[profile.release-docker]
inherits = "release"
opt-level = "z"

[workspace.dependencies]
actix = "0.13"
async-trait = "0.1"
borsh = "0.9"
clap = { version = "4.0", default-features = false }
dotenv = "0.15"
futures = "0.3"
jsonrpsee-types = "0.16"
jsonrpsee = { version = "0.16", features = ["full"] }
lazy_static = "1.4"
libp2p = "0.48"
near-crypto = "0.15"
near-jsonrpc-client = { version = "0.4", default-features = false, features = [
	"auth",
	"rustls-tls",
] }
near-jsonrpc-primitives = "0.15"
near-primitives = "0.15"
near-sdk = "4.0"
parking_lot = "0.12"
reqwest = "0.11"
rusqlite = { version = "0.28", features = ["bundled"] }
seda-chain-adapters = { path = "./adapters/chain" }
seda-config = { path = "./config" }
seda-logger = { path = "./logger" }
seda-node = { path = "./node" }
seda-p2p-adapters = { path = "./adapters/p2p" }
seda-runtime = { path = "./runtime/core" }
seda-runtime-adapters = { path = "./adapters/runtime" }
seda-runtime-sdk = { path = "./runtime/sdk" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.21", default-features = false }
tokio-rusqlite = "0.3"
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmer = "2.3"
wasmer-wasi = "2.3"
