[workspace]
resolver = "2"
default-members = ["cli"]
members = [
	"chains",
	"cli",
	"config",
	"contracts",
	"logger",
	"node",
	"p2p",
	"runtime/core",
	"runtime/macros",
	"wasm/cli",
	"wasm/test/demo-cli",
	"wasm/test/promise-wasm-bin",
]

[profile.dev]
codegen-units = 512
debug = 2
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[profile.release-docker]
inherits = "release"
opt-level = "z"

[workspace.dependencies]
actix = "0.13"
async-trait = "0.1"
borsh = { version = "0.9", default-features = false }
clap = { version = "4.0", default-features = false }
dotenv = "0.15"
futures = { version = "0.3", default-features = false }
jsonrpsee-types = "0.16"
jsonrpsee = { version = "0.16", default-features = false }
lazy_static = "1.4"
libp2p = { version = "0.48", default-features = false }
near-crypto = "0.15"
near-jsonrpc-client = { version = "0.4", default-features = false }
near-jsonrpc-primitives = "0.15"
near-primitives = "0.15"
near-sdk = { version = "4.0", default-features = false }
parking_lot = "0.12"
reqwest = "0.11"
rusqlite = { version = "0.28", features = ["bundled"] }
seda-chains = { path = "./chains" }
seda-config = { path = "./config" }
seda-logger = { path = "./logger" }
seda-node = { path = "./node" }
seda-p2p = { path = "./p2p" }
seda-runtime = { path = "./runtime/core" }
seda-runtime-sdk = { path = "./runtime/sdk" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"
tokio = { version = "1.21", default-features = false }
tokio-rusqlite = "0.3"
toml = "0.5"
tracing = { version = "0.1", features = ["log-always"] }
tracing-appender = "0.2"
# tracing-log = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
wasmer = { version = "2.3", default-features = false }
wasmer-wasi = { version = "2.3", default-features = false }
