[workspace]
resolver = "2"
default-members = ["cli"]
members = [
	"chains",
	"cli",
	"config",
	"crypto",
	"contracts",
	"logger",
	"node",
	"p2p",
	"runtime/core",
	"runtime/macros",
	"wasm/cli",
	"wasm/consensus",
	"wasm/test/demo-cli",
	"wasm/test/promise-wasm-bin",
]

[workspace.package]
rust-version = "1.66.1"

[profile.dev]
codegen-units = 512
debug = 2
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[profile.release-docker]
inherits = "release"
opt-level = "z"

[workspace.dependencies]
actix = "0.13"
async-trait = "0.1"
base64 = "0.13"
bn254 = { git = "https://github.com/sedaprotocol/bn254", branch = "main" }
borsh = { version = "0.9", default-features = false }
clap = { version = "4.1", default-features = false }
clap_complete = { version = "4.1", default-features = false }
clap-markdown = { version = "0.1", default-features = false }
concat-kdf = "0.1"
dotenv = "0.15"
ed25519-dalek = "1.0"
futures = { version = "0.3", default-features = false }
hex = "0.4"
jsonrpsee-types = "0.16"
jsonrpsee = { version = "0.16", default-features = false }
lazy_static = "1.4"
libp2p = { version = "0.50", default-features = false }
near-crypto = "0.15"
near-jsonrpc-client = { version = "0.4", default-features = false }
near-jsonrpc-primitives = "0.15"
near-contract-standards = "4.0"
near-primitives = "0.15"
near-sdk = { version = "4.0", default-features = false }
near-units = "0.2"
parking_lot = "0.12"
rand = "0.8"
reqwest = "0.11"
rusqlite = { version = "0.28", features = ["bundled"] }
schemars = "0.8"
seda-chains = { path = "./chains" }
seda-config = { path = "./config" }
seda-logger = { path = "./logger" }
seda-node = { path = "./node" }
seda-p2p = { path = "./p2p" }
seda-runtime = { path = "./runtime/core" }
seda-runtime-sdk = { path = "./runtime/sdk" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"
tokio = { version = "1.21", default-features = false }
tokio-rusqlite = "0.3"
toml = "0.5"
tracing = { version = "0.1", features = ["log-always"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
uint = { version = "0.8", default-features = false }
wasmer = { version = "2.3", default-features = false }
wasmer-wasi = { version = "2.3", default-features = false }
workspaces = "0.7"