[package]
name = "seda-adapters"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.58"
jsonrpsee-types = "0.15.1"
near-jsonrpc-client = { version = "0.4.0", default-features = false, features = [
	"auth",
	"rustls-tls",
] }
near-jsonrpc-primitives = "0.15.0"
near-primitives = "0.15.0"
tokio = { version = "1.21.2", default-features = false, features = [
	"io-std",
	"macros",
	"net",
	"rt-multi-thread",
	"time",
] }
tracing = "0.1.37"
seda-config = { path = "../config" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
near-crypto = "0.15.0"
thiserror = "1.0.37"
