[package]
name = "seda-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-crypto = { workspace = true }
near-primitives = { workspace = true }
seda-chain-adapters = { workspace = true }
seda-config = { workspace = true }
seda-node = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "seda"
path = "src/main.rs"
