[package]
name = "seda-cli"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "seda"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "std", "help"] }
dotenv = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true, features = [
	"auth",
	"rustls-tls",
] }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
seda-chain-adapters = { workspace = true }
seda-config = { workspace = true }
seda-logger = { workspace = true }
seda-node = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
