[package]
name = "seda-config"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
