[package]
name = "seda-config"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
clap = { workspace = true, features = ["derive", "std"] }
lazy_static = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
