[package]
name = "seda-crypto"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true


[dependencies]
bn254 = {workspace = true}
concat-kdf = { workspace = true, features = ["std"] }
ed25519-dalek = { workspace = true }
hex = {workspace = true}
rand = {version = "0.7"}
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
