[package]
name = "seda-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { workspace = true }
async-std = {version="1.12.0"}
async-trait = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
libp2p = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
seda-chain-adapters = { workspace = true }
seda-config = { workspace = true }
seda-runtime = { workspace = true }
seda-runtime-adapters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }