[package]
name = "seda-node"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
actix = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server"] }
parking_lot = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
seda-chains = { workspace = true }
seda-config = { workspace = true }
seda-p2p = { workspace = true }
seda-runtime = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rusqlite = { workspace = true }
tracing = { workspace = true }
