[package]
name = "seda-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: remove dep this after removing stdin
async-std = { version = "1.12.0" }
futures = { workspace = true }
libp2p = { workspace = true, features = [
	"gossipsub",
	"mdns-async-io",
	"noise",
	"tcp-async-io",
	"yamux",
] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
seda-config = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
