[package]
name = "seda-p2p"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
# TODO: remove dep this after removing stdin
async-std = { version = "1.12.0" }
tokio = { workspace = true }
libp2p = { workspace = true, features = [
	"gossipsub",
	"noise",
	"yamux",
	"mdns",
	"tcp",
	"macros",
	"async-std"
] }
parking_lot = { workspace = true }
seda-config = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
seda-config = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
