[package]
name = "seda-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.37"
toml = { version = "0.5.9", default-features = false }
