[package]
name = "seda-chain-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
jsonrpsee-types = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
tokio = { workspace = true }
seda-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
near-crypto = { workspace = true }
thiserror = { workspace = true }
