[package]
name = "seda-p2p-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: remove dep this after removing stdin
async-std = {version="1.12.0"}
futures = { workspace = true }
libp2p = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }