[package]
name = "seda-mainchain"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Not sure why `unit-testing` feature doesn't work when it's only a dev dep.
near-contract-standards = { workspace = true }
near-sdk = { workspace = true, features = ["legacy", "unit-testing"] }
serde = { workspace = true }
sha2 = { workspace = true, features = ["std"] }
uint = { workspace = true }
