[package]
name = "seda-contract-tests"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
near-units = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
workspaces = { workspace = true }
