[package]
name = "seda-contract-tests"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
near-units = { workspace = true }
schemars = { workspace = true }
seda-mainchain = { path = "../mainchain" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
workspaces = { workspace = true }
