[package]
name = "seda-runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
seda-runtime-adapters = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wasmer = { workspace = true }
wasmer-wasi = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
borsh = { workspace = true }
seda-config = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { workspace = true }
seda-runtime-adapters = { workspace = true, features = ["test_host"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
borsh = "0.9.3"
