[package]
name = "seda-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
seda-config = { workspace = true }
seda-runtime-adapters = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmer = { workspace = true, features = [
	"default-cranelift",
	"default-universal",
] }
wasmer-wasi = { workspace = true, features = ["host-fs", "sys"] }

[dev-dependencies]
reqwest = { workspace = true }
seda-runtime-adapters = { workspace = true, features = ["test_host"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
