[package]
name = "seda-runtime-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["serde_json"]
full = []

[dependencies]
clap = { workspace = true, features = ["derive", "std"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, optional = true, features = ["std"] }
tracing = { workspace = true }
