[package]
name = "seda-runtime-sdk"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
default = []
wasm = ["serde_json"]
full = []

[dependencies]
bn254 = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
lazy_static = { workspace = true }
seda-config = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, optional = true, features = ["std"] }
tracing = { workspace = true }
