[package]
name = "demo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
seda-runtime-sdk = { path = "../../runtime/sdk"}
clap = { version = "4.0.15", default-features = true, features = ["derive"] }