[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive", "std", "string"] }
serde_json = { workspace = true }
serde = { workspace = true }
seda-runtime-sdk = { workspace = true, features = ["wasm"] }
# seda-config = { workspace = true }
thiserror = { workspace = true }


borsh = "0.9.3"
parse-display = "0.7.0"