[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
clap = { workspace = true, features = ["derive", "help", "std", "string"] }
parse-display = { workspace = true }
seda-runtime-sdk = { workspace = true, features = ["wasm"] }
serde = { workspace = true }
serde_json = { workspace = true }