[package]
name = "demo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive", "std", "string"] }
seda-runtime-sdk = { workspace = true, features = ["wasm"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
parse-display = { workspace = true }