[package]
name = "promise-wasm-bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jsonpath-rust = "0.1.0"
bigdecimal = "0.3.0"
